// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Заблокированная кнопка рендериться без ошибок 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  disabled="true"
  type="button"
>
  <p
    className="text undefined"
  >
    Нажми меня
  </p>
</button>
`;

exports[`Кнопка с loader рендериться без ошибок 1`] = `
<button
  className="text text_type_button text_color_primary button undefined loader "
  disabled="true"
  type="button"
>
  <img
    alt="Загрузка."
    className="loader_icon"
    src="loader.svg"
  />
</button>
`;

exports[`Кнопка с текстом рендериться без ошибок 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  type="button"
>
  <p
    className="text undefined"
  >
    Нажми меня
  </p>
</button>
`;

exports[`Пустая кнопка рендерится без ошибок 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;
